Fix: Add Flutter installation to deployment process

--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,14 @@ services:
   - type: web
     name: todo-app
     env: node
-    buildCommand: npm install
+    buildCommand: |
+      # Install Flutter
+      git clone https://github.com/flutter/flutter.git -b stable
+      export PATH="$PATH:`pwd`/flutter/bin"
+      flutter doctor
+      flutter config --enable-web
+      flutter build web
+      npm install
     startCommand: node server.js
     envVars:
       # Server Configuration
